[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
anyhow = "1.0.59"
clap = {version="3.2.16", features= ["derive"] }
edit = "0.1.4"
either = "1.7.0"
dirs = "4.0.0"
log = "0.4.17"
lru = "0.7.8"
env_logger = "0.9.0"
futures = "0.3.21"
license-key = "0.1.0"
openssl = "0.10.41"
regex = "1.6.0"
kube = { version = "0.74.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
serde_json = "1.0"
serde_yaml = "0.8.26"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
tauri = { version = "1.0.3", features = ["api-all"] }
time = "0.3.11"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.3"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
